tests/parsing/05_comments.expected
21
syntax error, unexpected IDENTIFIER. line 5
16
