tests/parsing/05_comments.sc
# this is a line starting with a comment
22 - 1 # comment after text

# comment after empty line
1 this should give an error 2 #comment after error
17 - 1 # comment after # comment after # comment
# coµµent wiß wiürd charäcters
# comment at the end of file